I'm back :) change semantic HTML elements

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <!--Welcom-section-->
 
-  <div class="welcome-section" id="welcome-section">
+  <section class="welcome-section" id="welcome-section">
   <img class="mobile-photo" src="./Images/main-mobile.jpg" alt="purple_dandelion_flowers"/>
    <img class="my_photo" src="./Images/background.jpg" alt="purple_dandelion_flowers"/>   
 
@@ -37,16 +37,16 @@
    <div class = "hey" id="hey">
      <h1> I'm Simona</h1>
    <h2>WEB Developer</h2>
-</div>    
-</div>
+  </div>    
+  </section>
  
 
 <!--About Me-->
 
-<section class="main_section" id="Main">
-<div class="About-me">
+<main class="main_section" id="Main">
+<section class="About-me">
 <div class="title-mobile"><a class="a-mobile" href="/about_me/about.html" target="blank"><h3 class="title-Aboutme-mobile"> About Me&#8594;</h3></a></div>
-<div class="text-about-me">
+<section class="text-about-me">
 <div class="title"><h3 class="title-Aboutme"> About Me</h3></div>
 
 <article class="article">
@@ -114,19 +114,19 @@
         unique ways. </p>
   
   </article>
-</div>
-  <div>
+</section>
+  <figure>
     <img class="photo1" src="./Images/photo1.jpg" alt="me near the castle"/>
-  </div>
- </div>
+  </figure>
+</section>
 
-<div class="why">
+<section class="why">
 
-<div class="picture">
+<figure class="picture">
   <img class="picture-balloon" src="./Images/photo2.jpg" alt="me with balloons"/>
-</div>
+</figure>
 
-<div class="Why-text"> 
+<section class="Why-text"> 
 <div class="title-why-mobile"><a class="a-mobile" href="/My_Why/why.html" target="blank"><h3 class="title-MyWhy-mobile"> My Why&#8594;</h3></a></div>
 
 <article class="article_My_Why">
@@ -164,7 +164,7 @@ to create something mind blowing in the future.
   </p>
   <hr class="dots">
   
-  <div id="quote1">
+  <aside id="quote1">
     <div class="corner "id="left_top"></div>
     <div class="corner" id="left_bottom"></div>
     <div class="corner" id="right_top"></div>
@@ -174,15 +174,15 @@ to create something mind blowing in the future.
       <p class="quote"><i>&ldquo;It's the possibility of having a dream come true <br> that makes life interesting.&rdquo; </i></p>
     </blockquote>
   
-  </div>
+  </aside>
 
   </article>
 
-</div>
-</div>
+</section>
+</section>
 <!-- quote-->
 
-<div id="quote2">
+<aside id="quote2">
   <div class="corner "id="left_top"></div>
   <div class="corner" id="left_bottom"></div>
   <div class="corner" id="right_top"></div>
@@ -192,8 +192,8 @@ to create something mind blowing in the future.
     <p class="quote"><i>&ldquo;It's the possibility of having a dream come true <br> that makes life interesting.&rdquo; </i></p>
   </blockquote>
 
-</div>
-</section>
+</aside>
+</main>
 
  <!--My Projects-->
 <div class="title_my_projects"><h3 >My Projects</h3></div>
@@ -251,7 +251,7 @@ to create something mind blowing in the future.
     </div>
 
 <!--other projects-->
- <section class="other-projects">
+ <nav class="other-projects">
 <figure>
 <a class="text-project" href= "https://github.com/missim2020/Women-In-Tech" target="blank"><img class="picture-projects" src="./Images/women_in_tech.png" alt="women in tech" ><figcaption >"CodeFirstGirls" project</figcaption></a>
 </figure>
@@ -263,10 +263,10 @@ to create something mind blowing in the future.
 <figure>
     <a  class="text-project" href= "https://codepen.io/Missim2020/pen/vYOPOWM" target="blank"><img class="picture-projects" src="./Images/technical_documentation.jpg" alt="technical documentation" ><figcaption>Project for "FreeCodeCamp" certificate</figcaption></a>
     </figure>
-  </section>
+  </nav>
   
   <h5>More...</h5>
-  <section class="links">
+  <nav class="links">
    
     <figure class="more">
     <a class="project-links"href="https://github.com/missim2020" target="blank"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false" data-width="1.8rem" data-height="1.8rem"></span><figcaption>Github</figcaption></a>
@@ -280,7 +280,7 @@ to create something mind blowing in the future.
     <a class="project-links" href="https://www.codewars.com/users/missim2020" target="blank"><span class="iconify" data-icon="simple-icons:codewars" data-inline="false" data-width="1.8rem" data-height="1.8rem"></span><figcaption>Codewars</figcaption></a>
   </figure>
   
-  </section>
+</nav>
 </section>
 
 
@@ -290,10 +290,11 @@ to create something mind blowing in the future.
 
 <footer>
   <h6>You can be friends with me:</h6>
+  <nav>
   <a href="https://www.linkedin.com/in/simona-joksaite-aa128466/" target="blank"><span class="iconify" data-icon="ant-design:linkedin-outlined" data-inline="false" data-width="2rem" data-height="2rem"></span></a>
   <a href="https://www.instagram.com/simona_joksaite/" target="blank"><span class="iconify" data-icon="fa-brands:instagram" data-inline="false" data-width="2rem" data-height="2rem"></span></a>
   <a href="https://github.com/missim2020" target="blank"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false" data-width="2rem" data-height="2rem"></span></a>
-
+  </nav>
   <p class="copyright">&copy; Simona 2020 London</p>
 </footer>
 
