Working on media query for mobile phones.Create new page My_Projects

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <header id="header">
         <nav class="navbar" id="navbar">
             <ul>
-              <li> <a class="list" href="#Main">Nice to meet you </a> </li>
-              <li> <a class="list" href="#projects"> My projects </a> </li>
-              <li> <a class="list" href="#contact"> Contacts </a> </li>
+              <li> <a class="list" id="about" href="#Main">Nice to meet you </a> </li>
+              <li> <a class="list mobile" id="why"href="#Main">My Why </a> </li>
+              <li> <a class="list" id="projects" href="#projects"> My projects </a> </li>
+              <li> <a class="list hidden" href="#contact"> Contacts </a> </li>
             </ul>
             <hr class="HRnav" id="HRnav" size=3>
           </nav>
