finish My Projects page for mobile devices. Correct html, CSS and JS accordingly

--- a/My_Projects/projects.html
+++ b/My_Projects/projects.html
@@ -11,11 +11,13 @@
     <title>My projects</title>
 </head>
 <body>
-    
+ 
+  <div class="mobBack"><a class="back" href="/index.html">Menu</a></div>
+  
 <!--My Projects-->
 <div class="title_my_projects"><h3 >My Projects</h3></div>
  
-<section class="projects" id="projects">
+<main class="projects" id="projects">
 <!-- image carousel-->
   
   
@@ -98,9 +100,23 @@
   </figure>
   
 </nav>
-</section>
+</main>
+
+<section class="contact" id="contact">
+
+  <footer>
+    <h6>You can be friends with me:</h6>
+    <nav>
+    <a href="https://www.linkedin.com/in/simona-joksaite-aa128466/" target="blank"><span class="iconify" data-icon="ant-design:linkedin-outlined" data-inline="false" data-width="1.5rem" data-height="2rem"></span></a>
+    <a href="https://www.instagram.com/simona_joksaite/" target="blank"><span class="iconify" data-icon="fa-brands:instagram" data-inline="false" data-width="1.5rem" data-height="2rem"></span></a>
+    <a href="https://github.com/missim2020" target="blank"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false" data-width="1.5rem" data-height="2rem"></span></a>
+    </nav>
+    <p class="copyright">&copy; Simona 2020 London</p>
+  </footer>
+</section>  
 
 
-<script src="../JS/app.js"></script>
+
+<script src="./My_projects_JS/projects.js"></script>
 </body>
 </html>
