Media query for mobile devices: clean CSS,make rest of the page invisible with JS and link main page with other pages using JS

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="navbar" id="navbar">
             <ul>
               <li> <a class="list" id="about" href="#Main">Nice to meet you </a> </li>
-              <li> <a class="list mobile" id="why"href="#Main">My Why </a> </li>
-              <li> <a class="list" id="projects" href="#projects"> My projects </a> </li>
+              <li> <a class="list " id="why" href="#Main">My Why </a> </li>
+              <li> <a class="list mobile" id="projects" href="#projects"> My projects </a> </li>
               <li> <a class="list hidden" href="#contact"> Contacts </a> </li>
             </ul>
             <hr class="HRnav" id="HRnav" size=3>
@@ -45,7 +45,7 @@
 <!--About Me-->
 
 <main class="main_section" id="Main">
-<section class="About-me">
+<section class="About-me" id="aboutMe">
 <div class="title-mobile"><a class="a-mobile" href="/about_me/about.html" target="blank"><h3 class="title-Aboutme-mobile"> About Me&#8594;</h3></a></div>
 <section class="text-about-me">
 <div class="title"><h3 class="title-Aboutme"> About Me</h3></div>
@@ -121,7 +121,7 @@
   </figure>
 </section>
 
-<section class="why">
+<section class="why" id="Why">
 
 <figure class="picture">
   <img class="picture-balloon" src="./Images/photo2.jpg" alt="me with balloons"/>
@@ -197,9 +197,12 @@ to create something mind blowing in the future.
 </main>
 
  <!--My Projects-->
-<div class="title_my_projects"><h3 >My Projects</h3></div>
+
  
-<section class="projects" id="projects">
+<section class="projects" id="Projects">
+
+<div class="title_my_projects"><h3 >My Projects</h3></div>
+
 <!-- image carousel-->
   
   
