Image carousel: change pictures, add description of every photo, except the first. description changes automatically.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ to create something mind blowing in the future.
 
 <!-- image carousel-->
   
-  
+<div>
 <div class="slider-wrapper">
 
   <div class="slide active"> <!-- shows witch slide is active. after refresh from which slide we start doing our slide show -->
@@ -224,7 +224,7 @@ to create something mind blowing in the future.
   <img class="picture-carousel" src="../Images/cow.jpg" alt="picture of the cow">
   </div>
   <div class="slide">
-  <img class="picture-carousel" src="../Images/army.jpg" alt="military">
+  <img class="picture-carousel" src="../Images/army.png" alt="military">
   </div>
   <div class="slide">
   <img class="picture-carousel" src="../Images/choir.jpg" alt="children choir">
@@ -239,7 +239,7 @@ to create something mind blowing in the future.
   <div id="text-bar">
     <p id="description"></p>
   </div>
-
+</div>
   <div class="dots-wrapper">
   <span class="dot active"></span>
   <span class="dot"></span>
@@ -257,19 +257,26 @@ to create something mind blowing in the future.
 <!--other projects-->
  <nav class="other-projects">
 <figure>
-<a class="text-project" href= "https://github.com/missim2020/Women-In-Tech" target="blank"><img class="picture-projects" src="./Images/women_in_tech.png" alt="women in tech" ><figcaption >"CodeFirstGirls" project</figcaption></a>
+<a class="text-project" href= "https://github.com/missim2020/Women-In-Tech" target="blank">
+  <img class="picture-projects" src="./Images/women_in_tech.png" alt="women in tech" >
+  <figcaption >"CodeFirstGirls" project</figcaption></a>
 </figure>
 
 <figure>
-  <a  class="text-project" href= "https://github.com/missim2020/Dice-game" target="blank"><img class="picture-projects" src="./Images/dice_game.png" alt="dice game" > <figcaption>"Udemy course" project</figcaption></a>
+  <a  class="text-project" href= "https://github.com/missim2020/Dice-game" target="blank">
+    <img class="picture-projects" src="./Images/dice_game.png" alt="dice game" > 
+    <figcaption>"Udemy course" project</figcaption></a>
 </figure>
 
 <figure>
-    <a  class="text-project" href= "https://codepen.io/Missim2020/pen/vYOPOWM" target="blank"><img class="picture-projects" src="./Images/technical_documentation.jpg" alt="technical documentation" ><figcaption>Project for "FreeCodeCamp" certificate</figcaption></a>
+    <a  class="text-project" href= "https://codepen.io/Missim2020/pen/vYOPOWM" target="blank">
+    <img class="picture-projects" src="./Images/technical_documentation.jpg" alt="technical documentation" >
+    <figcaption>Project for "FreeCodeCamp" certificate</figcaption></a>
     </figure>
   </nav>
   
-  <h5>More...</h5>
+  <h5>More about my project</h5>
+  
   <nav class="links">
    
     <figure class="more">
