make media queries for tablets

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 
 <main class="main_section" id="Main">
 <section class="About-me" id="aboutMe">
-<div class="title-mobile"><a class="a-mobile" href="/about_me/about.html" target="blank"><h3 class="title-Aboutme-mobile"> About Me&#8594;</h3></a></div>
 <section class="text-about-me">
 <div class="title"><h3 class="title-Aboutme"> About Me</h3></div>
 
@@ -128,11 +127,10 @@
 </figure>
 
 <section class="Why-text"> 
-<div class="title-why-mobile"><a class="a-mobile" href="/My_Why/why.html" target="blank"><h3 class="title-MyWhy-mobile"> My Why&#8594;</h3></a></div>
 
 <article class="article_My_Why">
 <h3 class="title-MyWhy"> My Why</h3>
-  <p class="text">
+  <p class="textWhy">
 I am always interested in learning new skills and am energised by the prospect 
 of diving into a new and exciting career. I think “Founders and Coders” is a fantastic 
 way to do this. I like the idea of FAC as a community of like-minded people and I would 
@@ -140,7 +138,7 @@ love to be a part of it. I know that I can learn a lot from others and believe t
 a lot to give back too. 
   </p>
   <hr class="dots">
-  <p class="text">
+  <p class="textWhy">
 I have always been passionate about training people in my previous role. I found the 
 meetup approach used at FAC inspirational and learned so much about myself from the 
 experience:<br>
@@ -156,7 +154,7 @@ collaboratively.<br>
 
   </p>
   <hr class="dots">
-  <p class="text">
+  <p class="textWhy">
 I remember when I first created a very simple recipe page with the course at pirple.com 
 and first solved a kata at codewars.com. I was so proud that I achieved something that I 
 never thought I can do! This feeling of accomplishment propelled me onward to learn more; 
@@ -275,7 +273,7 @@ to create something mind blowing in the future.
     </figure>
   </nav>
   
-  <h5>More about my project</h5>
+  <h5>More...</h5>
   
   <nav class="links">
    
