change paths of Images in folders

--- a/My_Projects/projects.html
+++ b/My_Projects/projects.html
@@ -14,7 +14,7 @@
 <body>
 
 <header> 
-<nav><a class="back" href="/index.html">Menu</a></nav>
+<nav><a class="back" href="../index.html">Menu</a></nav>
 <h3 >My Projects</h3>
 </header> 
 
@@ -40,7 +40,7 @@
 <img class="picture-carousel" src="../Images/cow.jpg" alt="picture of the cow">
 </div>
 <div class="slide">
-<img class="picture-carousel" src="../Images/army.jpg" alt="military">
+<img class="picture-carousel" src="../Images/army.png" alt="military">
 </div>
 <div class="slide">
 <img class="picture-carousel" src="../Images/choir.jpg" alt="children choir">
