--- a/My_Why/why.html
+++ b/My_Why/why.html
@@ -14,9 +14,9 @@
 <body>
 
 <header>  
-<nav><a class="back" href="/index.html">Menu</a></nav>
+<nav><a class="back" href="../index.html">Menu</a></nav>
 <h3> My Why</h3>   
-<img class="photo4" src="/Images/desert.jpg" alt="me"/>
+<img class="photo4" src="../Images/desert.jpg" alt="me"/>
 </header>
 
 <main class="Why-text"> 
