--- a/about_me/about.html
+++ b/about_me/about.html
@@ -14,9 +14,9 @@
 <body>
 
 <header>
-<nav><a class="back" href="/index.html">Menu</a></nav>
+<nav><a class="back" href="../index.html">Menu</a></nav>
 <div class="title"><h3 class="title-Aboutme"> About Me</h3></div>
-<img class="photo3" src="/Images/hill.jpg" alt="me"/>
+<img class="photo3" src="../Images/hill.jpg" alt="me"/>
 </header>
 
 <main class="article">
