My Projects: add description of images to image carousel

--- a/My_Projects/projects.html
+++ b/My_Projects/projects.html
@@ -21,7 +21,7 @@
 <main class="projects" id="projects">
 
   <!-- image carousel-->
-   
+<div> 
 <div class="slider-wrapper">
 
 <div class="slide active"> <!-- shows witch slide is active. after refresh from which slide we start doing our slide show -->
@@ -51,7 +51,12 @@
   
 <a id="btn-prev" class="arrow">&#10094</a>
 <a id="btn-next"class="arrow">&#10095</a>
-  
+
+<div id="text-bar">
+  <p id="description"></p>
+</div>
+
+</div>
 <div class="dots-wrapper">
 <span class="dot active"></span>
 <span class="dot"></span>
