change the date in the footer, add My Projects to the header

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <nav class="navbar" id="navbar">
             <ul>
               <li> <a class="list" id="about" href="#Main">Nice to meet you </a> </li>
-              <li> <a class="list " id="why" href="#Main">My Why </a> </li>
+              <li> <a class="list mobile" id="why" href="#Main"> My Why </a> </li>
+              <li> <a class="list hidden"  href="#Projects"> My projects </a> </li>
               <li> <a class="list mobile" id="projects" href="#projects"> My projects </a> </li>
-              <li> <a class="list hidden" href="#contact"> Contacts </a> </li>
+              <li> <a class="list hidden" href="#contact"> Let's be friends </a> </li>
             </ul>
             <hr class="HRnav" id="HRnav" size=3>
           </nav>
@@ -304,7 +305,7 @@ to create something mind blowing in the future.
   <a href="https://www.instagram.com/simona_joksaite/" target="blank"><span class="iconify" data-icon="fa-brands:instagram" data-inline="false" data-width="2rem" data-height="2rem"></span></a>
   <a href="https://github.com/missim2020" target="blank"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false" data-width="2rem" data-height="2rem"></span></a>
   </nav>
-  <p class="copyright">&copy; Simona 2020 London</p>
+  <p class="copyright">&copy; Simona 2021 London</p>
 </footer>
   
 </section>
