corrected small mistakes, changed the quote font-family

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--<script src="https://kit.fontawesome.com/94d0b9783c.js" crossorigin="anonymous"></script>-->
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link rel="icon" href="./Images/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat&family=Sacramento&display=swap&family=Dancing+Script" rel="stylesheet">
     
     <title>Simona's Web Page</title>
 </head>
